<resources>
    <string name="app_name" translatable="false">SAPR</string>

    <!-- Construction card view layout-->
    <string name="view_the_solution">View the solution</string>
    <string name="rod_image">Construction Image</string>

    <!-- Construction card view time-->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="few_days_ago">Few days ago</string>
    <string name="one_week_ago">One week ago</string>
    <string name="two_weeks_ago">Two weeks ago</string>
    <string name="one_month_ago">One month ago</string>
    <string name="few_months_ago">Few months ago</string>
    <string name="few_years_ago">Few years ago</string>

    <!-- MainFragment -->
    <string name="main_fragment_add_a_construction">Add a construction</string>

    <!-- ConstructionFragment -->
    <string name="nodes_title">Nodes</string>
    <string name="rods_title">Rods</string>
    <string name="construction_btn_calculate">Save construction</string>
    <string name="construction_btn_add_rod">Add rod</string>
    <string name="construction_btn_add_node">Add node</string>
    <string name="toast_rod_too_many">Too many rods!</string>
    <string name="toast_need_support">There must be at least one support</string>
    <string name="toast_need_rods">Not enough rods in construction</string>
    <string name="tv_no_nodes_in_this_construction">No nodes in this construction</string>
    <string name="tv_no_rods_in_this_construction">No rods in this construction</string>

    <!-- Rod card view -->
    <string name="rods_number">Rod №%s</string>
    <string name="rod_cv_linear_load">Line distributed load</string>
    <string name="rod_cv_permissible_tension">Permissible tension</string>
    <string name="rod_cv_elastic_modulus">Elastic modulus</string>
    <string name="rod_cv_sectional_area">Cross-sectional area</string>

    <!-- Node card view -->
    <string name="nodes_number">Node №%s</string>
    <string name="node_cv_x_coordinate">X coordinate</string>
    <string name="node_cv_concentrated_load">Concentrated load</string>
    <string name="node_cv_support">Support</string>
    <string name="node_cv_yes">Yes</string>
    <string name="node_cv_no">No</string>

    <!-- Dialog add/edit node -->
    <string name="dialog_node_rigid_support">Rigid support</string>
    <string name="dialog_node_x_coordinate">Enter the X coordinate</string>
    <string name="dialog_node_load_concentrated">Enter a concentrated load</string>
    <string name="dialog_node_btn_apply">Apply</string>
    <string name="dialog_node_error_input_x">Invalid X coordinate</string>

    <!-- Dialog add/edit rod -->
    <string name="dialog_rod_square">Enter the cross-sectional area</string>
    <string name="dialog_rod_elastic_module">Enter the modulus of elasticity</string>
    <string name="dialog_rod_load_running">Enter the line distributed load</string>
    <string name="dialog_rod_tension">Enter the allowable tension</string>
    <string name="dialog_rod_btn_apply">Apply</string>
    <string name="dialog_rod_error_input_square">Invalid cross-sectional area</string>
    <string name="dialog_rod_error_input_elastic_module">Invalid modulus of elasticity</string>
    <string name="dialog_rod_error_input_tension">Invalid allowable tension</string>

    <!-- Dialog choose action -->
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_open">Open</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_delete">Delete</string>
    <string-array name="dialog_choose_action_construction">
        <item>@string/dialog_open</item>
        <item>@string/dialog_edit</item>
        <item>@string/dialog_delete</item>
    </string-array>
    <string-array name="dialog_choose_action_edit_or_delete">
        <item>@string/dialog_edit</item>
        <item>@string/dialog_delete</item>
    </string-array>

    <!-- Dialog delete -->
    <string name="dialog_delete_message_construction">Delete this construction?</string>

    <!-- Node delete -->
    <string name="dialog_delete_message_node">Delete this node?</string>

    <!-- Rod delete -->
    <string name="dialog_delete_message_rod">Delete this rod?</string>


    <string name="ok" translatable="false">OK</string>
    <string name="yes">Yes</string>

    <!-- CalculatingFragment -->
    <string name="calculating_fragment_construction_image">Construction image</string>
    <string name="values_in_an_cross_section">Values in an cross-section</string>
    <string name="select_the_rod_number">Select the rod number</string>
    <string name="enter_local_x_coordinate">Enter the local X coordinate</string>
    <string name="nx" translatable="false">Nx</string>
    <string name="ux" translatable="false">Ux</string>
    <string name="sx" translatable="false">Sx</string>
    <string name="m_dash" translatable="false">—</string>
    <string name="there_is_only_one_rod_here">There is only one rod here</string>
    <string name="text_zero">Current rod number: %s</string>


    <string name="help_button_action_bar">Help</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>


</resources>