<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_rod_square"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toTopOf="@+id/til_rod_elastic_module"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_rod_square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_rod_square"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_rod_elastic_module"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toTopOf="@+id/til_rod_load_running"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_rod_square">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_rod_elastic_module"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_rod_elastic_module"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_rod_tension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toTopOf="@+id/button_rod_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_rod_load_running">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_rod_tension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_rod_tension"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_rod_load_running"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toTopOf="@+id/til_rod_tension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_rod_elastic_module">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_rod_load_running"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_rod_load_running"
            android:inputType="numberDecimal|numberSigned" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_rod_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/dialog_rod_btn_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_rod_tension" />

</androidx.constraintlayout.widget.ConstraintLayout>